--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/fira-sans-condensed": "^5.0.3",
+    "@fontsource/open-sans": "^5.0.3",
+    "scss": "^0.2.4",
     "vue": "^3.2.47"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "sass": "^1.63.6",
     "vite": "^4.3.9"
   }
 }
